// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli parse args > all args 1`] = `
"target:
  url: https://www.baidu.com/
  serve: false
  userAgent: Cli
  viewportWidth: 1024
  viewportHeight: 768
  viewportScale: 2
  headed: false
flow: []
"
`;

exports[`cli parse args > basic 1`] = `
"target:
  url: https://www.baidu.com/
  serve: false
  userAgent: false
  viewportWidth: false
  viewportHeight: false
  viewportScale: false
  headed: false
flow: []
"
`;

exports[`cli utils > match exact file 1`] = `[]`;

exports[`cli utils > match files 1`] = `
[
  "tests/midscene_scripts/local/local.yml",
]
`;

exports[`cli utils > match folder 1`] = `
[
  "tests/midscene_scripts/sub/baidu.yaml",
  "tests/midscene_scripts/local/local.yml",
]
`;
